Start to build the about section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         </a>
       </div>
     </header>
+
+    <!-- tell search engines that this is the main element of our site -->
+    <main> 
+      <section class="section-about">
+        <h2 class="heading-secondary">
+          Exciting tours for adventurous people
+        </h2>
+      </section>
+    </main>
     <!--  
     <section class="grid-test">
       <div class="row">
