--- a/index.html
+++ b/index.html
@@ -34,14 +34,32 @@
     <!-- tell search engines that this is the main element of our site -->
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            Text content
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              temporibus maxime, unde ab impedit rem facere dolorum quia error
+              expedita nesciunt architecto eos voluptates magnam magni
+              recusandae corporis deleniti quidem.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              temporibus maxime, unde ab impedit rem facere dolorum quia error.
+            </p>
+
+            <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
             Image composition
