Add image, animations, caption, filter

--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
           <div class="story">
             <figure class="story__shape">
               <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">I had the best week with my family</h3>
@@ -270,6 +273,29 @@
                 error.
               </p>
             </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completly different now</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                temporibus maxime, unde ab impedit rem facere dolorum quia
+                error. Nulla temporibus maxime, unde ab impedit rem facere dolorum quia
+                error.
+              </p>
+            </div>
+          </div>
+          <div class="u-center-text u-margin-top-huge">
+            <a href="" class="btn-text">Read all stories &rarr;</a>
           </div>
         </div>
       </section>
