Add video for section background and styles

--- a/index.html
+++ b/index.html
@@ -249,7 +249,17 @@
            <a href="" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm"> 
+            <!-- coverr website -->
+            Your browser is not supported
+          </video>
+        </div>
+
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             We make people genuinely happy
@@ -298,6 +308,7 @@
             <a href="" class="btn-text">Read all stories &rarr;</a>
           </div>
         </div>
+
       </section>
     </main>
     <!--  
