--- a/index.html
+++ b/index.html
@@ -181,80 +181,80 @@
             </div>
           </div>
           <div class="col-1-of-3">
-              <div class="card">
-                  <div class="card__side card__side--front">
-                    <div class="card__picture card__picture--2">
-                      &nbsp;
-                    </div>
-                    <h4 class="card__heading">
-                      <span class="card__heading-span card__heading-span--2">
-                        The Forest Hiker
-                      </span>
-                    </h4>
-                    <div class="card__details">
-                      <ul>
-                        <li>7 day tour</li>
-                        <li>Up to 40 people</li>
-                        <li>6 tour guides</li>
-                        <li>Sleep in provided tents</li>
-                        <li>Difficulty: medium</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="card__side card__side--back card__side--back-2">
-                    <div class="card__cta">
-                      <div class="card__price-box">
-                        <p class="card__price-only">Only</p>
-                        <p class="card__price-value">£497</p>
-                      </div>
-                      <a href="" class="btn btn--white">Book now</a>
-                    </div>
-                  </div>
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--2">
+                  &nbsp;
                 </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">
+                    The Forest Hiker
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tour</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">£497</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-1-of-3">
-              <div class="card">
-                  <div class="card__side card__side--front">
-                    <div class="card__picture card__picture--3">
-                      &nbsp;
-                    </div>
-                    <h4 class="card__heading">
-                      <span class="card__heading-span card__heading-span--3">
-                        The Snow Adventurer
-                      </span>
-                    </h4>
-                    <div class="card__details">
-                      <ul>
-                        <li>5 day tour</li>
-                        <li>Up to 15 people</li>
-                        <li>3 tour guides</li>
-                        <li>Sleep in provided tents</li>
-                        <li>Difficulty: hard</li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="card__side card__side--back card__side--back-3">
-                    <div class="card__cta">
-                      <div class="card__price-box">
-                        <p class="card__price-only">Only</p>
-                        <p class="card__price-value">£897</p>
-                      </div>
-                      <a href="" class="btn btn--white">Book now</a>
-                    </div>
-                  </div>
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--3">
+                  &nbsp;
                 </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">
+                    The Snow Adventurer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tour</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">£897</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="u-center-text u-margin-bottom-huge">
-           <a href="" class="btn btn--green">Discover all tours</a>
+          <a href="" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
 
       <section class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
-            <source src="img/video.mp4" type="video/mp4">
-            <source src="img/video.webm" type="video/webm"> 
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
             <!-- coverr website -->
             Your browser is not supported
           </video>
@@ -269,18 +269,24 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
               <figcaption class="story__caption">
                 Mary Smith
               </figcaption>
             </figure>
             <div class="story__text">
-              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week with my family</h3>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week with my family
+              </h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
                 temporibus maxime, unde ab impedit rem facere dolorum quia
-                error. Nulla temporibus maxime, unde ab impedit rem facere dolorum quia
-                error.
+                error. Nulla temporibus maxime, unde ab impedit rem facere
+                dolorum quia error.
               </p>
             </div>
           </div>
@@ -289,18 +295,24 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
               <figcaption class="story__caption">
                 Jack Wilson
               </figcaption>
             </figure>
             <div class="story__text">
-              <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completly different now</h3>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completly different now
+              </h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
                 temporibus maxime, unde ab impedit rem facere dolorum quia
-                error. Nulla temporibus maxime, unde ab impedit rem facere dolorum quia
-                error.
+                error. Nulla temporibus maxime, unde ab impedit rem facere
+                dolorum quia error.
               </p>
             </div>
           </div>
@@ -315,46 +327,109 @@
           <div class="book">
             <div class="book__form">
               <form action="#" class="form">
-                  <div class="u-margin-bottom-medium">
-                      <h2 class="heading-secondary">
-                        Start booking now
-                      </h2>
-                  </div>
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">
+                    Start booking now
+                  </h2>
+                </div>
                 <div class="form__group">
-                  <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full Name"
+                    id="name"
+                    required
+                  />
                   <label for="name" class="form__label">Full Name</label>
                 </div>
 
                 <div class="form__group">
-                  <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Email address"
+                    id="email"
+                    required
+                  />
                   <label for="email" class="form__label">Email address</label>
                 </div>
 
                 <div class="form__group">
-                  <div class="form__radio-group u-margin-bottom-small" >
-                    <input type="radio" class="form__radio-input" id="small" name="size">
+                  <div class="form__radio-group u-margin-bottom-small">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="size"
+                    />
                     <label for="small" class="form__radio-label">
-                        <span class="form__radio-button"></span>
-                        Small tour group</label>
+                      <span class="form__radio-button"></span>
+                      Small tour group</label
+                    >
                   </div>
                   <div class="form__radio-group">
-                     <input type="radio" class="form__radio-input" id="large" name="size">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="size"
+                    />
                     <label for="large" class="form__radio-label">
                       <span class="form__radio-button"></span>
-                      Large tour group</label>
+                      Large tour group</label
+                    >
                   </div>
-                </div> 
+                </div>
 
                 <div class="form__group">
                   <button class="btn btn--green">Next step &rarr;</button>
                 </div>
-
               </form>
             </div>
           </div>
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img
+          src="img/logo-green-2x.png"
+          alt="Full logo"
+          class="footer__logo-box"
+        />
+        <div class="row">
+          <div class="col-1-of-2">
+            <div class="footer__navigation ">
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Company</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Company</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Contact</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Carrers</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#" class="footer__link">Privacy policy</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Terms</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-1-of-2">
+            <p class="footer__copyright">
+              Built by <a href="http://www.tudortacal.com" class="footer__link">Tudor Tacal</a> to practice SASS.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!--  
     <section class="grid-test">
       <div class="row">
