Start to build the navigation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toogle">
+      <label for="navi-toogle" class="navigation__button">MENU</label>
+      <div class="navigation__background">&nbsp;</div>
+        <nav class="navigation__nav">
+          <ul class="navigation__list">
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+          </ul>
+        </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -417,14 +432,18 @@
                   <a href="#" class="footer__link">Privacy policy</a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">Terms</a>
+                  <a href="#" class="footer__link">Terms</a>
                 </li>
               </ul>
             </div>
           </div>
           <div class="col-1-of-2">
             <p class="footer__copyright">
-              Built by <a href="http://www.tudortacal.com" class="footer__link">Tudor Tacal</a> to practice SASS.
+              Built by
+              <a href="http://www.tudortacal.com" class="footer__link"
+                >Tudor Tacal</a
+              >
+              to practice SASS.
             </p>
           </div>
         </div>
