--- a/index.html
+++ b/index.html
@@ -409,11 +409,16 @@
     </main>
     <footer class="footer">
       <div class="footer__logo-box">
-        <img
-          src="img/logo-green-2x.png"
-          alt="Full logo"
-          class="footer__logo-box"
-        />
+        <picture class="footer__logo">
+          <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" 
+                  media="(max-width: 37.5em)">
+          <img
+            srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+            alt="Full logo"
+            class="footer__logo-box"
+          />
+        </picture>
+
         <div class="row">
           <div class="col-1-of-2">
             <div class="footer__navigation ">
@@ -467,55 +472,5 @@
         </div>
       </div>
     </div>
-    <!--  
-    <section class="grid-test">
-      <div class="row">
-        <div class="col-1-of-2">
-          Col 1 of 2
-        </div>
-        <div class="col-1-of-2">
-          Col 1 of 2
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-2-of-3">
-          Col 2 of 3
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-2-of-4">
-          Col 2 of 4
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-3-of-4">
-          Col 3 of 4
-        </div>
-      </div>
-    </section>
-    -->
   </body>
 </html>
